packages/svelte/tests/validator/samples/rest-eachblock-binding-nested-rest/_config.js
import { test } from '../../test';

// TODO this maybe works in the new world - remove this warning?
export default test({ skip: true });
