packages/svelte/tests/compiler-errors/samples/runes-no-derived-assignment/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'constant_assignment',
		message: 'Cannot assign to derived state'
	}
});
